Added alias support
